# MLOPSEndtoEnd

./: README.md  delete_magnodb.py  docker-compose.yml  pyproject.toml  read_mongodb.py  webpageread.py  zeml_aritifact.py
application/utils/: split_user_full_name.py
configs/: digital_data_etl_maxime_labonne.yaml
llm_engineering/application/crawlers/: base.py  custom_article.py
llm_engineering/domain/base/: nosql.py
pipelines/: __init__.py  digital_data_etl.py
steps/etl/: __init__.py  get_or_create_user.py
tools/: run.py
